--- a/libphutil-git/PKGBUILD
+++ b/libphutil-git/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Nicolas Vivet <nizzox@gmail.com>
 
 pkgname=libphutil-git
-_gitname=libphutil
+_pkgname=libphutil
 pkgver=conduit.5.464.g54dbec7
 pkgrel=1
 pkgdesc='Library system which organizes PHP classes and functions into modules'
@@ -16,14 +16,14 @@ source=('git://github.com/facebook/libphutil.git')
 sha256sums=('SKIP')
 
 pkgver() {
-  cd "${_gitname}"
+  cd "${_pkgname}"
   git describe --always | sed 's|-|.|g' # Use the tag of the last commit
 }
 
 package() {
-  mkdir -p "${pkgdir}"/usr/share/php/"${_gitname}"
+  mkdir -p "${pkgdir}"/usr/share/php/"${_pkgname}"
   # do not copy hidden directories
-  cp -a "${srcdir}"/"${_gitname}"/* "${pkgdir}"/usr/share/php/"${_gitname}"/
+  cp -a "${srcdir}"/"${_pkgname}"/* "${pkgdir}"/usr/share/php/"${_pkgname}"/
 }
 
 # vim:set ts=2 sw=2 et:
