--- a/rubiksolver-git/PKGBUILD
+++ b/rubiksolver-git/PKGBUILD
@@ -2,27 +2,20 @@
 
 pkgname='rubiksolver-git'
 _pkgname='rubiksolver'
-pkgver=5e356b7
-pkgrel=2
+pkgver=1.1.r0.g83426da
+pkgrel=1
 pkgdesc="A Qt/QML application to assist with solving the popular Rubik's cube"
 arch=('i686' 'x86_64')
 url="https://github.com/qrwteyrutiyoup/rubiksolver"
 license=('GPL')
 depends=('qt5-quick1')
 makedepends=('git')
-source=('git://github.com/qrwteyrutiyoup/rubiksolver.git'
-        '0001-porting-to-qt5.patch')
-sha256sums=('SKIP'
-            '4b81eeeb7e8054f6d8be9abd9690729efa61fcefb3d7daa24a3c352b8da0b74c')
+source=('git://github.com/qrwteyrutiyoup/rubiksolver.git')
+sha256sums=('SKIP')
 
 pkgver() {
   cd "${_pkgname}"
-  git describe --always | sed 's|-|.|g' # Use the tag of the last commit
-}
-
-prepare() {
-  cd "${_pkgname}"
-  patch -uNp1 -i ../0001-porting-to-qt5.patch
+  git describe --tags --long | sed 's/^v//;s/-/.r/;s/-/./g'
 }
 
 build() {
